--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ai-sdk/google": "^3.0.13",
     "@ai-sdk/openai": "^3.0.18",
+    "@ai-sdk/react": "^3.0.57",
     "@anthropic-ai/sdk": "^0.71.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
@@ -39,7 +40,7 @@
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@types/uuid": "^10.0.0",
-    "ai": "^6.0.48",
+    "ai": "^6.0.55",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
