--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@supabase/supabase-js": "^2.93.1",
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "@tanstack/react-table": "^8.21.3",
     "@types/uuid": "^10.0.0",
     "ai": "^6.0.55",
     "class-variance-authority": "^0.7.1",
@@ -47,15 +48,17 @@
     "date-fns": "^4.1.0",
     "inngest": "^3.49.3",
     "lucide-react": "^0.562.0",
-    "next": "16.1.4",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "openai": "^6.16.0",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "supabase": "^2.72.9",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
