--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "openai": "^6.16.0",
+    "pako": "^2.1.0",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
